#15789 closed defect (fixed)
[PATCH] Memory leaks in src/common/imagbmp.cpp
Reported by: | ettl.martin | Owned by: | |
---|---|---|---|
Priority: | normal | Milestone: | |
Component: | GUI-all | Version: | dev-latest |
Keywords: | memory leak | Cc: | |
Blocked By: | Blocking: | ||
Patch: | yes |
Description
Please review the attached patch. It fixes three memory leaks in src/common/imagbmp.cpp.
Best regards and many thanks
Martin Ettl
Attachments (1)
Change History (3)
Changed 4 years ago by ettl.martin
comment:1 Changed 4 years ago by VZ
- Resolution set to fixed
- Status changed from new to closed
comment:2 Changed 4 years ago by VZ
Note: See
TracTickets for help on using
tickets.
proposed fix