Fix possible memory leak in BMP reading code.

Don't forget to free the arrays even in case of an error while reading from
the stream.

Closes #15789.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_3_0_BRANCH@75503 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775